--- a/static/cover.css
+++ b/static/cover.css
@@ -13,14 +13,13 @@
 #heading {
     position: absolute;
     font-family: cursive;
-    top: 37%;
+    top: 40%;
     left: 50%;
     transform: translate(-50%, -50%);
     color: #fff;
     text-align: center;
-    font-size: 4.5em;
-    font-weight: bold;
-    text-shadow: 2px 2px #000;
+    font-size: 4em;
+    text-shadow: 2px 2px #eca08b;
 }
 
 #heading1 {
