--- a/templates/table_rent_sale.html
+++ b/templates/table_rent_sale.html
@@ -17,7 +17,7 @@
     <div class="table">
         <table>
           <tr>
-            {% for column in data[0] %}
+            {% for column in column_names %}
             <th>{{ column }}</th>
             {% endfor %}
           </tr>
